# YeetThatWizard

./: .gitignore  CMakeLists.txt  README.md
Linux_Simplistic_Makefile/: readme.txt
Mac_simplistic_makefile/: readme.txt
src/: Barrel.cpp  Barrel.h  BaseEngine.cpp  CoordinateMappingFlip.h  Hfyda2Engine.cpp  Hfyda2Engine.h  Hfyda2TileManager.cpp  Hfyda2TileManager.h  InputHandler.cpp  InputHandler.h  RawImage.h  Spawner.cpp  Spawner.h  mainfunction.cpp
src/actors/: Dino.cpp  Dino.h  GameActor.h
src/commands/: Command.h
src/components/: Button.h  TextBox.h
src/helper/: Helper.h  Timer.h
src/monsters/: Blue.cpp  Blue.h  Monster.h  Red.cpp  Red.h  Wizard.cpp  Wizard.h
src/particles/: BlueBeam.cpp  BlueBeam.h  Fireball.cpp  Fireball.h  Meteor.cpp  Meteor.h  Particle.h
src/resources/data/highscore/: highscore.csv
src/resources/data/levels/: Level1.csv  Level2.csv  Level3.csv
src/resources/data/maps/: Level1.txt  Level2.txt  Level3.txt
src/states/: EndState.cpp  EndState.h  HighScoreState.cpp  HighScoreState.h  NewGameState.cpp  NewGameState.h  PauseState.cpp  PauseState.h  RunningState.cpp  RunningState.h  StartState.cpp  StartState.h  State.h
